# brainwasher

./: .gitignore  README.md  pyproject.toml  raspi-setup.sh
doc_template/source/: conf.py
examples/: ika_example.py  vici_example.py
src/brainwasher/: brainslosher_job.py  brainslosher_models.py  brainwasher_job.py  instrument.py  job.py  proof_of_concept.py  protocol.py
src/brainwasher/devices/: liquid_presence_detection.py  mixer.py  pressure_sensor.py  reaction_vessel.py  vessels.py
src/brainwasher/devices/compcooler/: chiller.py  protocol.py
src/brainwasher/devices/harp/: mixer.py
src/brainwasher/devices/ika/: .rct_basic.py.swp  .rct_basic_device_codes.py.swp  rct_basic.py  rct_basic_device_codes.py
src/brainwasher/devices/instruments/: brainslosher.py  brainwasher.py  instrument.py  sim_brainwasher.py
src/brainwasher/devices/pololu/: pololu_tic_mixer.py
src/brainwasher/devices/raspberry_pi/: mixer.py
src/brainwasher/devices/sequent_microsystems/: liquid_presence_detection.py  mixer.py  pressure_sensor.py  valve.py
src/brainwasher/devices/simulated_devices/: pressure_sensor.py  selector.py  syringe_pump.py
src/brainwasher/devices/valves/: closeable_vici.py  locking_vici.py  valve.py
src/brainwasher/errors/: instrument_errors.py
src/brainwasher/remote_instrument/: instrument_client.py  instrument_server.py
src/devices/ika/: rct_basic.py  rct_basic_design_codes.py
tests/: README.md  chiller_protocol.py  instrument_client_and_server_tests.py  protocol_tests.py  test_job.py  test_waste_vessel_compatibility.py  zmq_broadcaster_tests.py  zmq_receiver_tests.py  zmq_router_tests.py
