[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "brainwasher"
version = "0.1.0"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
#    "device-spinner @ git+ssh://git@github.com/AllenNeuralDynamics/device-spinner.git@main#egg=device_spinner",
#    "vicivalve @ git+ssh://git@gitlab.com:Poofjunior/vicivalve.git@dev/cmds_and_directional_moves#egg=vicivalve",
#    "runze_control",
    "pyzmq>=26.2.0",
    "pytest>=8.3.5",
    "ruff>=0.9.9",
    "Pint>=0.21.1",
    "pandas>=2.0.3",
    "igraph>=0.11.5",
    "SM16inpind>=1.0.1",
    "SM8mosind>=1.0.1",
    "SM16univin>=1.0.3",
    "smbus2>=0.5.0",
    "coloredlogs>=15.0.1",
    "device-spinner",
    "runze-control",
    "vicivalve",
    "inpromptu",
    "mock>=5.2.0",
    "pydantic>=2.11.4",
    "datetime>=5.5",
    "pyyaml>=6.0.2",
]


[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.uv.sources]
device-spinner = { path = "../device-spinner", editable = true }
runze-control = { path = "../runze-control", editable = true }
vicivalve = { path = "../../external_projects/vicivalve", editable = true }
inpromptu = { path = "../inpromptu", editable = true }
